# ZXCC

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  changes.md  config.h.in  configure  configure.ac  configure.in  update-configure.sh  zxcc.doc  zxcc.html
Z80/: Makefile.am  Makefile.in
cpmio/: AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  configure.in
cpmio/check/: Makefile.am  Makefile.in  testio.c
cpmio/include/: Makefile.am  Makefile.in  cpmio.h
cpmio/lib/: Makefile.am  Makefile.in  conbdos.c  cpmio.c  cpmio_i.h  iosig.c  termansi.c  termcore.c  termcore.h  termvt52.c
cpmredir/: ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  configure.in
cpmredir/Z80/: chdir.com  chdir.z80  cpmredir.rsx  cpmredir.z80  dparse.z80  dpcmd.z80  fstype.z80  lsdir.com  lsdir.z80  make.sub  mkdir.com  mkdir.z80  mount.com  mount.z80  redir.com  redir.z80  redirect.doc  rmdir.com  rmdir.z80  umount.com  umount.z80
cpmredir/doc/: README  sample.c
cpmredir/include/: Makefile.am  Makefile.in  cpmredir.h
cpmredir/lib/: Makefile.am  Makefile.in  cpmdrv.c  cpmglob.c  cpmint.h  cpmparse.c  cpmredir.c  track.c  util.c  xlt.c
winbuild/: README.md  install.cfg  wzxcc.sln
winbuild/Scripts/: install.cmd
winbuild/cpmio/: cpmio.vcxproj  cpmio.vcxproj.filters
winbuild/cpmredir/: cpmredir.vcxproj  cpmredir.vcxproj.filters  dirent.c
winbuild/include/: config-win.h  dirent.h
winbuild/zxas/: zxas.vcxproj  zxas.vcxproj.filters
winbuild/zxc/: zxc.vcxproj  zxc.vcxproj.filters
winbuild/zxcc/: zxcc.vcxproj  zxcc.vcxproj.filters
winbuild/zxlibr/: zxlibr.vcxproj  zxlibr.vcxproj.filters
winbuild/zxlink/: zxlink.vcxproj  zxlink.vcxproj.filters
winbuild/zxobjtohex/: zxobjtohex.vcxproj  zxobjtohex.vcxproj.filters
