dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/cpmio.c)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR(m4)
LT_INIT
VERSION=1.1.1
UPDATED='March 28, 2001'
AM_INIT_AUTOMAKE(cpmio, $VERSION)
AM_CONFIG_HEADER(config.h)

AC_ARG_WITH(readline,   
[  --with-readline         Use GNU readline for line input (no)])

dnl Checks for programs.
dnl AC_PROG_CXX	   -- autoscan found this, don't know where
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB(ncurses, printw, LIBS="-lncurses $LIBS")
AC_CHECK_LIB(curses,  printw, LIBS="-lcurses  $LIBS")
if test x"$with_readline" = x"yes"; then
  CFLAGS="$CFLAGS -DUSE_READLINE"
  AC_CHECK_LIB(readline, readline)
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h unistd.h)
AC_CHECK_HEADERS(ncurses.h curses.h, break)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select)

AC_OUTPUT(Makefile lib/Makefile include/Makefile check/Makefile)
