dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/cpmredir.c)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR(m4)
VERSION=1.1.4
UPDATED='December 28, 2013'
AM_INIT_AUTOMAKE(cpmredir, $VERSION)
AM_CONFIG_HEADER(config.h)
LT_INIT

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h sys/vfs.h windows.h winnt.h utime.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkdir rmdir)

AC_OUTPUT(Makefile include/Makefile lib/Makefile)
